--- a/src/components/Navigation/styles.scss
+++ b/src/components/Navigation/styles.scss
@@ -10,6 +10,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	pointer-events: none;
 }
 
 	.open {
@@ -71,16 +72,6 @@
 	.container {
 		font-size: 5rem;
 	}
-}
-
-// Tablet landscape
-@media (min-width: 768px) and (orientation: landscape) {
-
-}
-
-// Desktop portrait
-@media (min-width: 1200px) and (max-aspect-ratio: 8/9) {
-	
 }
 
 // Desktop landscape
